--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,10 @@ edition = "2018"
 
 [dependencies]
 zmq = "0.9.2"
+unicode-width = "0.1"
+termion = "1.5"
+whoami = "0.7.0"
+chrono = "0.4.0"
+unicode-segmentation = "1.2"
+rand = "0.7"
+tui = "0.13.0"
