--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,7 @@ termion = "1.5"
 whoami = "0.7.0"
 chrono = "0.4.0"
 unicode-segmentation = "1.2"
-rand = "0.7"
 tui = "0.13.0"
+crypto_box = "0.5.0"
+rand = "0.7.3"
+hex = "0.4.2"
